fix: toolbar height when content is too long

--- a/frontend/src/components/toolbar/styles.module.scss
+++ b/frontend/src/components/toolbar/styles.module.scss
@@ -3,6 +3,11 @@
   background-color: #293042;
 }
 
+.navbar {
+  min-height: 100vh;
+  height: 100%;
+}
+
 ::-webkit-scrollbar {
   width: 8px;
 }
